typeScript setup compledted for nodejs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,5 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
-  "include": ["index.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./**/*.ts"]
 }
