--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-     "dev":"ts-node index.ts",
-     "build": "tsc",
-     "start": "node dist/index.js"
+    "dev": "nodemon --config nodemon.json",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "nodemon": "^3.1.10"
-  },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
